# conscribe

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_uncovered.py
conscribe/: __init__.py  cli.py  discover.py  exceptions.py  llms.txt  scanner.py  wiring.py
conscribe/config/: __init__.py  _utils.py  builder.py  codegen.py  composed.py  degradation.py  docstring.py  extractor.py  fingerprint.py  json_schema.py  mro.py
conscribe/docs/: api-reference.md  cli.md  config-typing.md  guide-alice.md  guide-bob.md  mro-and-degradation.md  overview.md  recipes.md  registration.md
conscribe/registration/: __init__.py  auto.py  discover.py  filters.py  key_transform.py  meta_base.py  registrar.py  registry.py
conscribe/stubs/: __init__.py  collector.py  generator.py  writer.py
layer_registry/: __init__.py  exceptions.py
layer_registry/config/: __init__.py
layer_registry/registration/: __init__.py  auto.py  discover.py  registrar.py  registry.py
mock/mock_framework/: __init__.py  layers.py  protocols.py
mock/mock_framework/agents/: __init__.py  browser_use.py  custom.py  skyvern.py
mock/mock_framework/evaluators/: __init__.py  exact_match.py  llm_judge.py
mock/mock_framework/llm/: __init__.py  anthropic.py  local.py  openai.py
mock/mock_framework/tools/: __init__.py  browser_tool.py  file_tool.py
tests/: conftest.py  test_edge_cases.py  test_scanner.py  test_wiring.py
tests/config/: conftest.py  test_auto_freshness.py  test_builder.py  test_cli.py  test_codegen.py  test_composed.py  test_degradation.py  test_docstring.py  test_extractor.py  test_fingerprint.py  test_json_schema.py  test_mro.py  test_nested_builder.py
tests/integration/: test_config_bob_scenarios.py  test_config_end_to_end.py  test_no_circular_imports.py  test_path_a_inheritance.py  test_path_b_bridge.py  test_path_c_manual.py  test_pydantic_generic.py  test_scenario_alice_framework.py  test_scenario_bob_extends.py  test_wiring_e2e.py
tests/registration/: test_auto.py  test_diamond.py  test_discover.py  test_filters.py  test_key_transform.py  test_registrar.py  test_registry.py
tests/stubs/: test_collector.py  test_generator.py  test_writer.py
