[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conscribe"
version = "0.1.2"
description = "Automatic class registration and config typing stub generation for layered Python architectures"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.urls]
Homepage = "https://github.com/QLYYLQ/conscribe"
Repository = "https://github.com/QLYYLQ/conscribe"
Issues = "https://github.com/QLYYLQ/conscribe"

[project.scripts]
conscribe = "conscribe.cli:main"

[project.optional-dependencies]
docstring = ["docstring-parser>=0.15"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=conscribe --cov-report=term-missing --tb=short -q"
