[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conscribe"
version = "0.8.0"
description = "Automatic class registration and config typing stub generation for layered Python architectures"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
]

[project.urls]
Homepage = "https://github.com/QLYYLQ/conscribe"
Documentation = "https://github.com/QLYYLQ/conscribe/tree/master/conscribe/docs"
Repository = "https://github.com/QLYYLQ/conscribe"
Issues = "https://github.com/QLYYLQ/conscribe/issues"

[project.scripts]
conscribe = "conscribe.cli:main"

[project.optional-dependencies]
docstring = ["docstring-parser>=0.15"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "attrs>=22.0",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/",
    "*.md",
    "!README.md",
    ".claude/",
    "demo_*.py",
    "test_*.py",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["conscribe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=conscribe --cov-report=term-missing --tb=short -q"
